fix: z-index

--- a/common/common.scss
+++ b/common/common.scss
@@ -37,7 +37,7 @@
   color: rgb(255, 255, 255);
   margin-top: 55px;
   box-shadow: rgba(0, 0, 0, 0.33) 0px 3px 8px;
-  z-index: 10;
+  z-index: 999;
   text-align: center;
   align-items: center;
   display: none;
